--- a/Desarrollo de interfaces/Examenes/WpfApp1MartinSonsecaEduardoExamenXAML/WpfApp1MartinSonsecaEduardoExamenXAML.csproj
+++ b/Desarrollo de interfaces/Examenes/WpfApp1MartinSonsecaEduardoExamenXAML/WpfApp1MartinSonsecaEduardoExamenXAML.csproj
@@ -8,4 +8,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+	<ItemGroup>
+		<Content Include="Imagenes/*.jpg">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Imagenes/*.png">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
 </Project>
